# deltar

./: .gitignore  Cargo.toml  README.md
client/: package.json
client/src/: ScreenController.js  deltachat.js  index.js  ipc.js
client/src/components/: Attachment.js  ChatListContextMenu.js  ChatView.js  Composer.js  ContactList.js  CreateContact.js  EditGroup.js  GroupBase.js  Media.js  SplittedChatListAndView.js  UnblockContacts.js
client/src/components/dialogs/: EncrInfo.js  Settings.js  confirmationDialog.js
client/src/components/helpers/: ClickableLink.js
client/src/components/map/: MapComponent.js
client/src/lib/: state.js
deltar/: package.json
deltar/src/: .model.js.swp  application-constants.js  deltachat.js  index.js
deltar/src/components/: ChatList.js  ChatView.js  Composer.js  ComposerMessageInput.js  CreateChat.js  CreateGroup.js  GroupBase.js  Login.js  Menu.js  MessageWrapper.js
deltar/src/components/dialogs/: About.js  DeadDrop.js  EncrInfo.js  ForwardMessage.js  ImexProgress.js  KeyTransfer.js  Settings.js  SetupMessage.js  index.js
deltar/src/components/map/: MapComponent.js
deltar/src/lib/: state.js
src/: .main.rs.swp  localize.js  logins.js  main.rs
